# repo_community

./: .gitignore  Cargo.toml  README.md  SECURITY.md  manifest.js
.github/: CODEOWNERS  bot_old.yml
.github/workflows/: bot.yml  publish.yml
av/: clamav.js  getApiKey.js  package.json  pnpm-lock.yaml  scan.mjs  token  upload.mjs  win32.js
avdwnl/: .gitignore  Cargo.toml
avdwnl/src/: main.rs
db/: home.json
db/apps/: 0iUdtpFh2LIWsRKpl9EeSbYff6RDnIu0Tyo207sv.json  vscodium.json
db/dev/: 2
db/map/: 1.json
db/res/0iUdtpFh2LIWsRKpl9EeSbYff6RDnIu0Tyo207sv/: 0
db/search/: 1.json
events/: package-lock.json  package.json  pnpm-lock.yaml
events/issue_comment/: genFullAvReport.js  index.js  test.json
events/tests/: index.js
manifests/a/ahqstore/: 0iUdtpFh2LIWsRKpl9EeSbYff6RDnIu0Tyo207sv.json
reports/linux/: report.json
reports/win32/: report.json
src/: main.rs  parser.rs  remove.rs  types.rs
src/load/: android.rs  mod.rs
src/redist/: mod.rs
src/shared/: gh.rs  mod.rs  user.rs
users/: 1.json  2.json
