[package]
name = "astore-apps-repo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahqstore-types = { version = "3", features = ["apps_repo"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = []
load_bytes = []
remove_manifest = []
